# commons

./: .gitignore  .travis.yml  commons.py  cujoko_commons.py  pyproject.toml  requirements.txt  setup.py
.dev/: pyproject.toml
.github/workflows/: publish.yml
cjk_commons/: logging_.py  settings.py
commons/: __about__.py  __init__.py  commons.py  compat.py  logging_.py  settings.py  zip.py
src/cjk_commons/: logging_.py
src/tests/: test_commons.py
tests/: test_commons.py
