[tool.poetry]
name = "cjk-commons"
version = "3.6.2"
description = "Commons"
authors = ["Cujoko <cujoko@gmail.com>"]
packages = [{include = "cjk_commons"}]
license = "MIT"
repository = "https://github.com/Cujoko/commons"
keywords = ["commons"]
classifiers=[
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: Russian",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.9",
    "Topic :: Software Development",
    "Topic :: Utilities"
]

[tool.poetry.dependencies]
python = "^3.9"
appdirs = "^1.4.4"
PyYAML = "^6.0"
yodl = "^1.0.0"
loguru = "^0.6.0"


[tool.poetry.group.dev.dependencies]
pylint = "^2.16.2"
pytest = "^7.2.1"
rope = "^1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
